--- a/src/redux-thunk/redux/frontend/components/serviceAdd.css
+++ b/src/redux-thunk/redux/frontend/components/serviceAdd.css
@@ -35,3 +35,8 @@
     width: 400px;
     text-align: center;
 }
+
+.service-add__spinner {
+    -webkit-animation: fa-spin 2s infinite linear;
+    animation: fa-spin 2s infinite linear;
+}
