--- a/src/redux-thunk/redux/frontend/components/removeButton.css
+++ b/src/redux-thunk/redux/frontend/components/removeButton.css
@@ -1,7 +1,4 @@
-.form-spinner {
+.button-spinner {
     -webkit-animation: fa-spin 2s infinite linear;
     animation: fa-spin 2s infinite linear;
-    color: #db3c48;
-    font-size: 24px;
-    margin: 30px 0 30px 180px;
 }
