--- a/src/redux-thunk/redux/frontend/components/serviceList.css
+++ b/src/redux-thunk/redux/frontend/components/serviceList.css
@@ -40,3 +40,11 @@
     font-size: 24px;
     margin: 30px 0 0 180px;
 }
+
+.service-list__error {
+    background: #f8d7da;
+    color: #711e25;
+    padding: 10px;
+    width: 400px;
+    text-align: center;
+}
