--- a/src/redux-thunk/redux-thunk/components/reduxWithFetch.css
+++ b/src/redux-thunk/redux-thunk/components/reduxWithFetch.css
@@ -1,34 +1,9 @@
-#spinner {
-    position: relative;
-    width: 20px;
-    height: 20px;
-    border: 3px solid #db3c48;;
-    border-radius: 50%;
-    border-top-color: #fff;
-    animation: spin 1s ease-in-out infinite;
-    -webkit-animation: spin 1s ease-in-out infinite;
+.spinner {
+    color: #db3c48;
+    font-size: 32px !important;
     margin: 30px 0 30px 180px;
 }
 
-#button-spinner {
-    position: relative;
-    border: 3px solid #ffffff;
-    border-top-color: #db3c48;
-    animation: spin 1s ease-in-out infinite;
-    -webkit-animation: spin 1s ease-in-out infinite;
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-    padding: 5px
-}
-
-@keyframes spin {
-    to {
-        -webkit-transform: rotate(360deg);
-    }
-}
-@-webkit-keyframes spin {
-    to {
-        -webkit-transform: rotate(360deg);
-    }
+.button-spinner {
+    color: white;
 }
