--- a/src/redux-thunk/redux/components/reduxWithFetch.css
+++ b/src/redux-thunk/redux/components/reduxWithFetch.css
@@ -10,8 +10,9 @@
     margin: 30px 0 30px 180px;
 }
 
-#button-spinner {
-    position: relative;
+#button-spinner:after {
+    content: "";
+    position: absolute;
     width: 20px;
     height: 20px;
     border: 3px solid #db3c48;;
