--- a/src/redux-thunk/redux-thunk/components/serviceAdd.css
+++ b/src/redux-thunk/redux-thunk/components/serviceAdd.css
@@ -22,6 +22,12 @@
     cursor: pointer;
     font-size: 14px;
 }
+
+.service-add button:disabled,
+button[disabled]{
+    background: #f8d7da;
+}
+
 .service-add button:first-child{
     margin-right: 5px;
 
